Resolves #662. Fixes stretching issue on aimmo landing page (#663)
* Resolves #662. Fixes stretching issue on aimmo landing page

* Move the CSS to is-flex class instead

--- a/portal/static/portal/sass/partials/_utils.scss
+++ b/portal/static/portal/sass/partials/_utils.scss
@@ -44,6 +44,10 @@
     display: flex;
     flex-direction: column;
   }
+
+  img {
+    align-self: center;
+  }
 }
 
 .hide {
